5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1577_1326.log
== SUBMITION (2019-03-14 19:01:24) 
-- CODE:
print(5)
-- EXECUTION TIME:
0.210259
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:01:46) 
-- CODE:
print(40 - 35==5)
-- EXECUTION TIME:
0.187991
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
True
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:01:47) 
-- CODE:
print(40 - 35==5)
-- EXECUTION TIME:
0.152172
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
True
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:01:52) 
-- CODE:
print(40 - 35 == 5)
-- EXECUTION TIME:
0.174286
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
True
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:01:53) 
-- CODE:
print(40 - 35 == 5)
-- EXECUTION TIME:
0.197635
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
True
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:01:56) 
-- CODE:
print(40 - 35 = 5)
-- EXECUTION TIME:
0.165666
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 - 35 = 5)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:01:57) 
-- CODE:
print(40 - 35 = 5)
-- EXECUTION TIME:
0.216734
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 - 35 = 5)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:01:57) 
-- CODE:
print(40 - 35 = 5)
-- EXECUTION TIME:
0.162667
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 - 35 = 5)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:01:57) 
-- CODE:
print(40 - 35 = 5)
-- EXECUTION TIME:
0.127554
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 - 35 = 5)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:01:58) 
-- CODE:
print(40 - 35 = 5)
-- EXECUTION TIME:
0.164016
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 - 35 = 5)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:01:58) 
-- CODE:
print(40 - 35 = 5)
-- EXECUTION TIME:
0.131471
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 - 35 = 5)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:01:58) 
-- CODE:
print(40 - 35 = 5)
-- EXECUTION TIME:
0.14441
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 - 35 = 5)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:02:14) 
-- CODE:
print(40-35=5)
-- EXECUTION TIME:
0.126677
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40-35=5)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:02:15) 
-- CODE:
print(40-35=5)
-- EXECUTION TIME:
0.138445
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40-35=5)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:02:19) 
-- CODE:
print(40-35 = 5)
-- EXECUTION TIME:
0.149663
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40-35 = 5)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:02:21) 
-- CODE:
print(40 - 35 = 5)
-- EXECUTION TIME:
0.199222
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 - 35 = 5)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:02:25) 
-- CODE:
print(40 -- 35 = 5)
-- EXECUTION TIME:
0.145572
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 -- 35 = 5)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:02:26) 
-- CODE:
print(40 -- 35 = 5)
-- EXECUTION TIME:
0.2186
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 -- 35 = 5)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:02:47) 
-- CODE:
print($40 - $35 = $5)
-- EXECUTION TIME:
0.16954
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print($40 - $35 = $5)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:02:48) 
-- CODE:
print($40 - $35 = $5)
-- EXECUTION TIME:
0.143402
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print($40 - $35 = $5)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:02:49) 
-- CODE:
print($40 - $35 = $5)
-- EXECUTION TIME:
0.137068
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print($40 - $35 = $5)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:02:49) 
-- CODE:
print($40 - $35 = $5)
-- EXECUTION TIME:
0.138601
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print($40 - $35 = $5)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:02:49) 
-- CODE:
print($40 - $35 = $5)
-- EXECUTION TIME:
0.128636
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print($40 - $35 = $5)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:02:49) 
-- CODE:
print($40 - $35 = $5)
-- EXECUTION TIME:
0.139694
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print($40 - $35 = $5)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:02:49) 
-- CODE:
print($40 - $35 = $5)
-- EXECUTION TIME:
0.11182
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print($40 - $35 = $5)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:02:50) 
-- CODE:
print($40 - $35 = $5)
-- EXECUTION TIME:
0.129511
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print($40 - $35 = $5)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:02:50) 
-- CODE:
print($40 - $35 = $5)
-- EXECUTION TIME:
0.136317
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print($40 - $35 = $5)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:02:50) 
-- CODE:
print($40 - $35 = $5)
-- EXECUTION TIME:
0.124341
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print($40 - $35 = $5)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:02:51) 
-- CODE:
print($40 - $35 = $5)
-- EXECUTION TIME:
0.157595
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print($40 - $35 = $5)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:02) 
-- CODE:
print(R$40 - R$35 = R$5)
-- EXECUTION TIME:
0.198124
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:03) 
-- CODE:
print(R$40 - R$35 = R$5)
-- EXECUTION TIME:
0.176399
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:06) 
-- CODE:
print(R$40 - R$35 = R$5)
-- EXECUTION TIME:
0.230948
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:15) 
-- CODE:
print('R$40 - R$35 = R$5')
-- EXECUTION TIME:
0.116761
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
R$40 - R$35 = R$5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:16) 
-- CODE:
print('R$40 - R$35 = R$5')
-- EXECUTION TIME:
0.17379
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
R$40 - R$35 = R$5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:16) 
-- CODE:
print('R$40 - R$35 = R$5')
-- EXECUTION TIME:
0.168107
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
R$40 - R$35 = R$5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:31) 
-- CODE:
print(R$40 - R$35 = R$5)
-- EXECUTION TIME:
0.119538
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:33) 
-- CODE:
print(R$40 - R$35 = R$5)
-- EXECUTION TIME:
0.216832
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:33) 
-- CODE:
print(R$40 - R$35 = R$5)
-- EXECUTION TIME:
0.131797
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:33) 
-- CODE:
print(R$40 - R$35 = R$5)
-- EXECUTION TIME:
0.115181
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:33) 
-- CODE:
print(R$40 - R$35 = R$5)
-- EXECUTION TIME:
0.168607
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:33) 
-- CODE:
print(R$40 - R$35 = R$5)
-- EXECUTION TIME:
0.134398
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:45) 
-- CODE:
print(R$40 - R$35 = R$5)
-- EXECUTION TIME:
0.157118
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:45) 
-- CODE:
print(R$40 - R$35 = R$5)
-- EXECUTION TIME:
0.126016
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:45) 
-- CODE:
print(R$40 - R$35 = R$5)
-- EXECUTION TIME:
0.116987
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:48) 
-- CODE:
print(R$40 - R$35 = 5)
-- EXECUTION TIME:
0.120965
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = 5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:48) 
-- CODE:
print(R$40 - R$35 = 5)
-- EXECUTION TIME:
0.106961
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = 5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:49) 
-- CODE:
print(R$40 - R$35 = 5)
-- EXECUTION TIME:
0.290437
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = 5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:49) 
-- CODE:
print(R$40 - R$35 = 5)
-- EXECUTION TIME:
0.144745
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = 5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:49) 
-- CODE:
print(R$40 - R$35 = 5)
-- EXECUTION TIME:
0.221923
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = 5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:49) 
-- CODE:
print(R$40 - R$35 = 5)
-- EXECUTION TIME:
0.179739
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1326/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:49) 
-- CODE:
print(R$40 - R$35 = 5)
-- EXECUTION TIME:
0.12348
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1326/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:50) 
-- CODE:
print(R$40 - R$35 = 5)
-- EXECUTION TIME:
0.249362
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = 5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:50) 
-- CODE:
print(R$40 - R$35 = 5)
-- EXECUTION TIME:
0.135396
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = 5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:50) 
-- CODE:
print(R$40 - R$35 = 5)
-- EXECUTION TIME:
0.120078
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = 5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:56) 
-- CODE:
print(R$40 - R$35 = R$5)
-- EXECUTION TIME:
0.209883
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:57) 
-- CODE:
print(R$40 - R$35 = R$5)
-- EXECUTION TIME:
0.146878
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:57) 
-- CODE:
print(R$40 - R$35 = R$5)
-- EXECUTION TIME:
0.154977
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:58) 
-- CODE:
print(R$40 - R$35 = R$5)
-- EXECUTION TIME:
0.16199
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:03:58) 
-- CODE:
print(R$40 - R$35 = R$5)
-- EXECUTION TIME:
0.135168
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:04:20) 
-- CODE:
print(R$40 - R$35 = R$5)
-- EXECUTION TIME:
0.288603
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:04:21) 
-- CODE:
print(R$40 - R$35 = R$5)
-- EXECUTION TIME:
0.21215
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:04:22) 
-- CODE:
print(R$40 - R$35 = R$5)
-- EXECUTION TIME:
0.195056
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 = R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:04:40) 
-- CODE:
print(R$40-R$35=R$5)
-- EXECUTION TIME:
0.226061
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40-R$35=R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:04:41) 
-- CODE:
print(R$40-R$35=R$5)
-- EXECUTION TIME:
0.219698
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40-R$35=R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:04:45) 
-- CODE:
print(R$40-R$35==R$5)
-- EXECUTION TIME:
0.140433
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40-R$35==R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:04:45) 
-- CODE:
print(R$40-R$35==R$5)
-- EXECUTION TIME:
0.159691
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40-R$35==R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:04:45) 
-- CODE:
print(R$40-R$35==R$5)
-- EXECUTION TIME:
0.101923
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1326/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:04:45) 
-- CODE:
print(R$40-R$35==R$5)
-- EXECUTION TIME:
0.145518
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40-R$35==R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:04:50) 
-- CODE:
print(R$40 - R$35 == R$5)
-- EXECUTION TIME:
0.15
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 == R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:04:51) 
-- CODE:
print(R$40 - R$35 == R$5)
-- EXECUTION TIME:
0.253712
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 == R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:04:51) 
-- CODE:
print(R$40 - R$35 == R$5)
-- EXECUTION TIME:
0.147383
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 == R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:04:51) 
-- CODE:
print(R$40 - R$35 == R$5)
-- EXECUTION TIME:
0.106098
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 - R$35 == R$5)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:04:52) 
-- CODE:
print( R$40 - R$35 == R$5)
-- EXECUTION TIME:
0.17734
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print( R$40 - R$35 == R$5)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:04:55) 
-- CODE:
print( R$40 - R$35 == R$5 )
-- EXECUTION TIME:
0.193287
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print( R$40 - R$35 == R$5 )
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:23) 
-- CODE:
print(R$40 + R$35 == R$75)
-- EXECUTION TIME:
0.139503
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 == R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:24) 
-- CODE:
print(R$40 + R$35 == R$75)
-- EXECUTION TIME:
0.184922
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 == R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:25) 
-- CODE:
print(R$40 + R$35 == R$75)
-- EXECUTION TIME:
0.197768
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 == R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:25) 
-- CODE:
print(R$40 + R$35 == R$75)
-- EXECUTION TIME:
0.113074
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1326/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:25) 
-- CODE:
print(R$40 + R$35 == R$75)
-- EXECUTION TIME:
0.109849
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 == R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:25) 
-- CODE:
print(R$40 + R$35 == R$75)
-- EXECUTION TIME:
0.121529
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 == R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:26) 
-- CODE:
print(R$40 + R$35 == R$75)
-- EXECUTION TIME:
0.168899
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 == R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:26) 
-- CODE:
print(R$40 + R$35 == R$75)
-- EXECUTION TIME:
0.110712
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 == R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:26) 
-- CODE:
print(R$40 + R$35 == R$75)
-- EXECUTION TIME:
0.123841
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 == R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:26) 
-- CODE:
print(R$40 + R$35 == R$75)
-- EXECUTION TIME:
0.117389
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 == R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:26) 
-- CODE:
print(R$40 + R$35 == R$75)
-- EXECUTION TIME:
0.104821
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 == R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:26) 
-- CODE:
print(R$40 + R$35 == R$75)
-- EXECUTION TIME:
0.206457
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 == R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:27) 
-- CODE:
print(R$40 + R$35 == R$75)
-- EXECUTION TIME:
0.111127
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1326/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:27) 
-- CODE:
print(R$40 + R$35 == R$75)
-- EXECUTION TIME:
0.2187
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 == R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:29) 
-- CODE:
print(R$40 + R$35 = R$75)
-- EXECUTION TIME:
0.181862
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:30) 
-- CODE:
print(R$40 + R$35 = R$75)
-- EXECUTION TIME:
0.132281
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:31) 
-- CODE:
print(R$40 + R$35 = R$75)
-- EXECUTION TIME:
0.103478
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:32) 
-- CODE:
print(R$40 + R$35 = R$75)
-- EXECUTION TIME:
0.119683
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:32) 
-- CODE:
print(R$40 + R$35 = R$75)
-- EXECUTION TIME:
0.207326
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:33) 
-- CODE:
print(R$40 + R$35 = R$75)
-- EXECUTION TIME:
0.167415
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:33) 
-- CODE:
print(R$40 + R$35 = R$75)
-- EXECUTION TIME:
0.155697
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:34) 
-- CODE:
print(R$40 + R$35 = R$75)
-- EXECUTION TIME:
0.280891
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:34) 
-- CODE:
print(R$40 + R$35 = R$75)
-- EXECUTION TIME:
0.143339
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:34) 
-- CODE:
print(R$40 + R$35 = R$75)
-- EXECUTION TIME:
0.110365
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:35) 
-- CODE:
print(R$40 + R$35 = R$75)
-- EXECUTION TIME:
0.17106
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:35) 
-- CODE:
print(R$40 + R$35 = R$75)
-- EXECUTION TIME:
0.099246
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1326/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:41) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.195493
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:41) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.160789
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:42) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.122706
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:42) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.156857
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:42) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.0973618
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1326/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:42) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.170572
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:42) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.114448
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:42) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.136765
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:43) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.134652
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:43) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.125189
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:43) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.108291
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:43) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.109682
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:43) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.125335
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:44) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.172388
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:44) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.135317
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:44) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.117673
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:44) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.177452
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:45) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.12198
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:45) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.120227
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:45) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.112942
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:45) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.175951
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:45) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.103367
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1326/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:46) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.143445
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:46) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.115715
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:46) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.165746
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:02) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.215095
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:03) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.175812
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:04) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.123598
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:04) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.108283
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:04) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.145535
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:04) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.126819
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:05) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.115987
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:05) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.117982
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:05) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.117162
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:05) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.108628
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:05) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.116455
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:06) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.289003
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:06) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.129597
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:06) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.138511
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:06) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.150649
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:06) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.112205
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:06) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.15707
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:07) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.112845
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:07) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.149171
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:07) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.111455
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:07) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.119165
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:07) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.13934
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:08) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.194773
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:08) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.126065
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:08) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.110457
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:11) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.150428
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:11) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.146864
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:12) 
-- CODE:
print(40 + 35 = "R$"75)
-- EXECUTION TIME:
0.115957
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = "R$"75)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:31) 
-- CODE:
print("R$"40 + "R$"35 = "R$"75)
-- EXECUTION TIME:
0.210628
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print("R$"40 + "R$"35 = "R$"75)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:32) 
-- CODE:
print("R$"40 + "R$"35 = "R$"75)
-- EXECUTION TIME:
0.171843
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print("R$"40 + "R$"35 = "R$"75)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:32) 
-- CODE:
print("R$"40 + "R$"35 = "R$"75)
-- EXECUTION TIME:
0.138541
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print("R$"40 + "R$"35 = "R$"75)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:32) 
-- CODE:
print("R$"40 + "R$"35 = "R$"75)
-- EXECUTION TIME:
0.106821
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print("R$"40 + "R$"35 = "R$"75)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:32) 
-- CODE:
print("R$"40 + "R$"35 = "R$"75)
-- EXECUTION TIME:
0.128084
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print("R$"40 + "R$"35 = "R$"75)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:37) 
-- CODE:
print("R$"40 + "R$"35 = "R$"75)
-- EXECUTION TIME:
0.162452
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print("R$"40 + "R$"35 = "R$"75)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:38) 
-- CODE:
print("R$"40 + "R$"35 = "R$"75)
-- EXECUTION TIME:
0.108619
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1326/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:38) 
-- CODE:
print("R$"40 + "R$"35 = "R$"75)
-- EXECUTION TIME:
0.126949
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print("R$"40 + "R$"35 = "R$"75)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:38) 
-- CODE:
print("R$"40 + "R$"35 = "R$"75)
-- EXECUTION TIME:
0.114913
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print("R$"40 + "R$"35 = "R$"75)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:39) 
-- CODE:
print("R$"40 + "R$"35 = "R$"75)
-- EXECUTION TIME:
0.113329
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print("R$"40 + "R$"35 = "R$"75)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:39) 
-- CODE:
print("R$"40 + "R$"35 = "R$"75)
-- EXECUTION TIME:
0.16615
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print("R$"40 + "R$"35 = "R$"75)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:42) 
-- CODE:
print("R$"40 + "R$"35 = "R$"75)
-- EXECUTION TIME:
0.163913
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print("R$"40 + "R$"35 = "R$"75)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:59) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.124519
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:00) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.161565
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:00) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.109267
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1326/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:00) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.223292
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:00) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.142654
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:00) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.12275
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:01) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.265826
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:01) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.140429
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:01) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.191474
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:01) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.106671
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1577/1326/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:01) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.229882
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:01) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.129667
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:02) 
-- CODE:
print(40 + 35 = 75)
-- EXECUTION TIME:
0.166274
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:04) 
-- CODE:
print(40 + 35 =75)
-- EXECUTION TIME:
0.201447
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 =75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:04) 
-- CODE:
print(40 + 35 =75)
-- EXECUTION TIME:
0.119921
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40 + 35 =75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:09) 
-- CODE:
print(40+35=75)
-- EXECUTION TIME:
0.12334
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40+35=75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:09) 
-- CODE:
print(40+35=75)
-- EXECUTION TIME:
0.142011
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40+35=75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:09) 
-- CODE:
print(40+35=75)
-- EXECUTION TIME:
0.122807
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40+35=75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:09) 
-- CODE:
print(40+35=75)
-- EXECUTION TIME:
0.123819
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40+35=75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:10) 
-- CODE:
print(40+35=75)
-- EXECUTION TIME:
0.111351
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40+35=75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:10) 
-- CODE:
print(40+35=75)
-- EXECUTION TIME:
0.11971
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40+35=75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:10) 
-- CODE:
print(40+35=75)
-- EXECUTION TIME:
0.111886
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40+35=75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:10) 
-- CODE:
print(40+35=75)
-- EXECUTION TIME:
0.165622
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40+35=75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:10) 
-- CODE:
print(40+35=75)
-- EXECUTION TIME:
0.122045
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40+35=75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:10) 
-- CODE:
print(40+35=75)
-- EXECUTION TIME:
0.122276
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(40+35=75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:08:59) 
-- CODE:
print('40 + 35 = 75')
-- EXECUTION TIME:
0.219676
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
40 + 35 = 75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:09:00) 
-- CODE:
print('40 + 35 = 75')
-- EXECUTION TIME:
0.210146
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
40 + 35 = 75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:09:00) 
-- CODE:
print('40 + 35 = 75')
-- EXECUTION TIME:
0.11574
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
40 + 35 = 75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:09:01) 
-- CODE:
print('40 + 35 = 75')
-- EXECUTION TIME:
0.19363
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
40 + 35 = 75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:09:50) 
-- CODE:
print(R$40 ++ R$35 == R$75)
-- EXECUTION TIME:
0.159039
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 ++ R$35 == R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:09:51) 
-- CODE:
print(R$40 ++ R$35 == R$75)
-- EXECUTION TIME:
0.168342
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 ++ R$35 == R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:09:53) 
-- CODE:
print(R$40 ++ R$35 = R$75)
-- EXECUTION TIME:
0.158042
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 ++ R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:09:54) 
-- CODE:
print(R$40 ++ R$35 = R$75)
-- EXECUTION TIME:
0.292708
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 ++ R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:09:54) 
-- CODE:
print(R$40 ++ R$35 = R$75)
-- EXECUTION TIME:
0.149645
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 ++ R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:09:54) 
-- CODE:
print(R$40 ++ R$35 = R$75)
-- EXECUTION TIME:
0.10898
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 ++ R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:09:54) 
-- CODE:
print(R$40 ++ R$35 = R$75)
-- EXECUTION TIME:
0.11115
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 ++ R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:09:54) 
-- CODE:
print(R$40 ++ R$35 = R$75)
-- EXECUTION TIME:
0.110318
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 ++ R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:09:57) 
-- CODE:
print(R$40 + R$35 = R$75)
-- EXECUTION TIME:
0.116112
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:09:58) 
-- CODE:
print(R$40 + R$35 = R$75)
-- EXECUTION TIME:
0.127977
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:09:58) 
-- CODE:
print(R$40 + R$35 = R$75)
-- EXECUTION TIME:
0.111848
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:09:58) 
-- CODE:
print(R$40 + R$35 = R$75)
-- EXECUTION TIME:
0.173591
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:09:58) 
-- CODE:
print(R$40 + R$35 = R$75)
-- EXECUTION TIME:
0.130382
-- ERROR:
  File "/home/codebench/codes/1577/1326/main.py", line 1
    print(R$40 + R$35 = R$75)
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:10:13) 
-- CODE:
print(40 + 35)
-- EXECUTION TIME:
0.16074
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
